@@ -1,9 +1,14 @@
 'use strict';
 
+var Hoek = require('hoek');
 var authors = require('./authors');
 
 function angleize(thing) {
     return thing && ('<' + thing + '>');
+}
+
+function trimit(w) {
+    return w && w.trim && w.trim();
 }
 
 function fts(obj) {
@@ -12,9 +17,15 @@ function fts(obj) {
             .concat(angleize(obj.url))
             .concat(obj.keywords)
             .concat(obj.description)
-            .map(function (w) { return w && w.trim && w.trim(); });
+            .map(trimit);
+
+    words = Hoek.unique(words);
 
     return words.join(' ');
 }
 
 module.exports = fts;
+
+fts.angleize = angleize;
+fts.trimit = trimit;
+
