@@ -35,6 +35,7 @@
     "JSONStream": "^0.10.0",
     "columnify": "^1.3.2",
     "event-stream": "^3.1.7",
+    "hoek": "^2.11.0",
     "nopt": "^3.0.1",
     "pure-fts": "^1.1.0"
   }
